Add preliminary homepage content, styling, and scripting.
Changes include:

- Experimenting with the W3Schools Accordion style/script to display past
  courses. This can be expanded in the future to use a tabular style for
  more information to be included direclty on the webpage without
  clutter.
- Some default CSS resets. A futrue commit will lay out my basic
  style.css rules that hopefully can share responsive layout
  responsibilities across my course webpages.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Michael Haaf's Homepage</title>
     <meta
       name="description"
-      content="Course content for courses taught by Michael Haaf at John Abbott College."
+      content="Michael Haaf's homepage for teaching at John Abbott College."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/style.css" />
@@ -15,8 +15,82 @@
       sizes="any"
       href="images/favicon.svg"
     />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
-    <p>Testing!</p>
+    <header>
+      <h1>Michael Haaf</h1>
+      <nav>
+        <a href="/">Home</a>
+        <a href="#">Contact</a>
+        <a href="#">Teaching</a>
+      </nav>
+    </header>
+    <main>
+      <h1>About me</h1>
+      <p>
+        I am a member of the teaching faculty in the
+        <a
+          href="https://departments.johnabbott.qc.ca/departments/computer-science/"
+          >Department of Computer Science</a
+        >
+        at John Abbott College.
+      </p>
+      <h1>Contact</h1>
+      <ul>
+        <li>
+          Email:
+          <a href="mailto:michael.haaf@johnabbott.qc.ca"
+            >michael.haaf@johnabbott.qc.ca</a
+          >
+        </li>
+        <li>Office: Penfield 311</li>
+        <li>
+          Schedule: You may find my availabilities and book appointments with me
+          <a href="#">here (link to my scheduler)</a>.
+        </li>
+      </ul>
+      <h1>Teaching</h1>
+
+      <button class="accordion">Winter 2023</button>
+      <ul class="panel">
+        <li>420-2W6 User Interfaces</li>
+        <li>420-DBA Introduction to Programming in C#</li>
+      </ul>
+
+      <button class="accordion">Fall 2022</button>
+      <ul class="panel">
+        <li>420-1N6 Technical Support</li>
+        <li>420-1T6 Productivity Tools</li>
+      </ul>
+
+      <button class="accordion">Fall 2021</button>
+      <ul class="panel">
+        <li>420-1N6 Technical Support</li>
+      </ul>
+
+      <button class="accordion">Winter 2021</button>
+      <ul class="panel">
+        <li>420-6G3 Web Programming</li>
+      </ul>
+
+      <button class="accordion">Fall 2020</button>
+      <ul class="panel">
+        <li>420-543 Unix Networking</li>
+      </ul>
+
+      <button class="accordion">Summer 2020</button>
+      <ul class="panel">
+        <li>420-DBF Introduction to Programming in C#</li>
+      </ul>
+
+      <button class="accordion">Winter 2020</button>
+      <ul class="panel">
+        <li>420-DBF Introduction to Programming in C#</li>
+      </ul>
+    </main>
+    <footer>
+      &copy Copyright 2023 <a href="#">Michael Haaf</a>. All rights reserved.
+    </footer>
   </body>
 </html>
